설계과제/설계과제1/temp/ssu_score/error/20190004/12_error.txt
STUDENT/20190004/12.c: In function ‘main’:
STUDENT/20190004/12.c:69:2: error: expected declaration or statement at end of input
  exit(0);
  ^~~~
